# chandelier-or-not

./: .gas-snapshot  .gitignore  .gitmodules  Cargo.toml  README.md  foundry.toml  remappings.txt
frames-v2/: README.md  package.json
frames-v2/src/app/: app.tsx  layout.tsx  opengraph-image.tsx  page.tsx  providers.tsx
frames-v2/src/app/.well-known/farcaster.json/: route.ts
frames-v2/src/components/: ChandelierOrNot.tsx  Demo.tsx  Ipfs.tsx
frames-v2/src/components/providers/: WagmiProvider.tsx  Web3Provider.tsx
frames-v2/src/components/ui/: IpfsImage.tsx
frames-v2/src/contracts/: ChandelierOrNot.json  ChandelierOrNotToken.json  GateKeeper.json
frames-v2/src/lib/: connector.ts
script/: Deploy.s.sol  Post.s.sol  PostAndVote.s.sol  post-and-vote-to-chandelier-or-not.sh  post-to-chandelier-or-not.sh
src/: ChandelierOrNot.sol  ChandelierOrNotToken.sol  GateKeeper.sol  IGateKeeper.sol  INeynarUserScoresReader.sol  INeynarVerificationsReader.sol  IUserHurdle.sol  UserHurdle.sol  farcaster.rs  instagram.rs  main.rs
src-staking/: PointsToken.sol  StakedToken.sol  StakedTokenFactory.sol
src/staking/: PointsToken.sol  StakedToken.sol  StakedTokenFactory.sol
src/web_server/: axum.rs  frame.rs  mod.rs  upload.rs
templates/: frame.html  root.html
test/: ChandelierOrNot.t.sol
