[package]
name = "chandelier-or-not"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
envy = "0.4.2"
eyre = "0.6.12"
instagram-scraper-rs = { version = "0.1.0", default-features = false, features = ["rustls"] }
reqwest = "0.12.8"
serde = "1.0.210"
serde_json = "1.0.128"
sled = "0.34.7"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[patch.crates-io]
instagram-scraper-rs = { git = "https://github.com/BlinkyStitt/instagram-scraper-rs.git", branch = "main" }
