[package]
name = "chandelier-or-not"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.7", features = ["tracing"] }
dotenvy = "0.15.7"
envy = "0.4.2"
eyre = "0.6.12"
futures = "0.3.31"
instagram-scraper-rs = { version = "0.1.0", default-features = false, features = ["rustls"] }
reqwest = "0.12.9"
serde = "1.0.214"
serde_json = "1.0.132"
sled = "0.34.7"
tokio = { version = "1.41.1", features = ["full", "parking_lot", "tracing"] }
tokio-stream = "0.1.16"
tokio-util = { version = "0.7.12", features = ["tracing"] }
tower-http = { version = "0.6.1", features = ["timeout", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json", "parking_lot"] }
url = "2.5.3"

[patch.crates-io]
instagram-scraper-rs = { git = "https://github.com/BlinkyStitt/instagram-scraper-rs.git", branch = "main" }
